# coursework1.2.0

./: CMakeList.txt  CMakeLists.txt  ISTRUCTION.txt  README.md  compile_commands.json  history.txt  resources.rc
111/: libpng16-config
src/: GameLogic.cpp  GameLogic.h  History.cpp  History.h  Menu.cpp  Menu.h  Render.cpp  Render.h  main.cpp
